assets/css/styles.css
body {
  border: 20px double #79a7d3;
  border-radius: 5px;
  font-family: 'Righteous', cursive;
}
.selected {
  border: 5px solid pink;
}

/*buttons for left-side bar*/
.btn {
  background: #79a7d3;
  -webkit-border-radius: 28;
  -moz-border-radius: 28;
  border-radius: 28px 0px 0px 28px;
  color: #8a3080;
  font-size: 20px;
  padding: 10px 20px 10px 20px;
  text-decoration: none;
  margin-left: 10px;
}
/*buttons for right panel*/

#submit-button,.btn-right {
  background: #79a7d3;  
  border-radius: 28px;
  color: #8a3080;
  font-size: 20px;
  padding: 10px 20px 10px 20px;
  text-decoration: none;
  margin-left: 10px;
}

#txt-submit-button,.btn-right-two {
  background: #79a7d3;
  border-radius: 28px;
  color: #8a3080;
  padding: 10px;
  font-size:15px;
  margin-left:150px;
  letter-spacing: 3px;
}
/*header text styling and background color*/
.app-name {
  font-size: 87px;
  color: #8a3080;
  font-family: 'Righteous', cursive;
  text-shadow: 0px 0px 0 rgb(134, 44, 124), -1px 1px 0 rgb(130, 40, 120),

  -33px -18px 0px rgba(64,95,207,0);
}

.right-container {
  flex: 0 0 70%;
  border-radius: 70 70px 0 0;
  overflow: hidden;
  border: 5px solid #8a307f;
  border-radius: 5px 5px 5px 5px;
}

/*right-side bar*/

/*end right-side bar*/

.img-container {
  display: flex;
  justify-content: center;
}
/*left side bar buttons and main content container text*/
.share-thought, .mood-title {
  margin: 30px;  
  text-shadow: -1px 1px 1px 1px #8a307f;
  font-size: 30px;
  letter-spacing: -0.6px;
  word-spacing: 2px;
  color: #8a307f;
  font-weight: bold;
}
.previous-title, .today-title {
  margin-bottom: 30px;  
  text-shadow: -1px 1px 1px 1px #8a307f;
  font-size: 20px;
  letter-spacing: -0.6px;
  word-spacing: 2px;
  color: #8a307f;
  font-weight: bold;
 

}
/*end of left-side bar buttons and main content container text*/

.emoji {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 20px;
  
}

.mood-button {
  background-color: #8a307f;
  
  border: 1px solid #b2b8ad;
  display: inline-block;
  cursor: pointer;
  color: #79a7d3;
  font-size: 15px;
  border-radius:28px;
  padding: 10px;
  text-align:center;
  margin-right: 40px;
}
.weather-results {
  width: 40%;
}
.container-border {
  border: 1px solid grey;
  margin: 20px;
  background-color: lightblue;
  padding: 50px;
}
.icon-container {
  margin: 0 auto;
  width: 50px;
  height: 50px;
}
.entry-card {
  display:flex;
  flex-direction: column;
  align-items: center;
  border: 1px solid black;
  overflow-wrap: break-word;
}



.ql-toolbar.ql-snow {

  box-sizing: border-box;
  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
  padding: 8px;
  width: 900px;
  margin:auto;
  display: flex;
  justify-content: space-evenly;
}

.editor-container{
  width:908px;
  margin:auto;
}

.mood-submit{
  width: 900px;
  margin: 0 auto;
  display: flex;
  justify-content: flex-end;
}

#searchterm[type="text"]:focus {
  
  outline : none;
 }

 .previous-date-container:focus {
   outline:none;
 }

